welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:3: error: '(' expected but identifier found.
    if nums[k]==lookingFor {
       ^indexOfValue:6: error: illegal start of simple expression
  }
  ^